Integration of type and spacing feature
Squashed commit of the following:

commit f93a3109d002a1b81f4ed1bd084f350e279d818d
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Dec 6 11:24:49 2013 +0100

    Adjust text in manage permissions and remove superfluous whitespace

commit aef48e5e79ade764423b5d073efacbce2cf8f886
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Dec 6 10:45:16 2013 +0100

    Domina: using the priority setting in contexts

commit e6ef708fed0733f3865be081ffa2b74bcf1909b4
Author: Thomas Schank <DrTom@schank.ch>
Date:   Thu Dec 5 22:14:46 2013 +0100

    Updated personas db

commit 86c80d7761fe42380e2edb9a8baed93539c80558
Author: Thomas Schank <DrTom@schank.ch>
Date:   Thu Dec 5 22:05:05 2013 +0100

    Task fetch_personas will work over vpn

    and actually report something when it fails

commit 184d703dc615ee3e7ede6f149246eae683929536
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Dec 6 13:02:31 2013 +0100

    In sidebar: bring back arrows to indicate state of the filters on all levels.

commit 8da8f0cf01e658d1a78761052ac08e87bda13e13
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Dec 6 12:51:14 2013 +0100

    Add rewind icon to the filter reset link.

commit 128b7ff04f0dbbdd9320a305fa54f3acb82c6005
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Dec 6 12:49:23 2013 +0100

    Document rewind icon.

commit 6b7afa14e5ee771b2bf1e875a97bcd6046bd23ee
Author: Piotr F <piotr@piotrf.pl>
Date:   Fri Dec 6 10:26:30 2013 +0100

    Rename Filtereinstellungen to Filterset… (editieren). Add in dropdown separator.

commit d70aa1845a1f3f2857820433ef71ba743c1c8337
Author: Piotr F <piotr@piotrf.pl>
Date:   Thu Dec 5 17:41:57 2013 +0100

    Remove .weak class from modal close icons. Again.

commit 092c276be743b0c63e766a1b806037b845afb752
Author: Piotr F <piotr@piotrf.pl>
Date:   Thu Dec 5 17:38:34 2013 +0100

    Correct new filterset button on the search page.

commit c09585ceb6fe762050f9098a5043c13068a1b8b4
Author: Piotr F <piotr@piotrf.pl>
Date:   Wed De

--- a/app/assets/fonts/madek-icon-font/demo.html
+++ b/app/assets/fonts/madek-icon-font/demo.html
@@ -9,10 +9,23 @@
 	<link rel="stylesheet" href="style.css"></head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> madek-icon-font <small class="fgc1">(Glyphs:&nbsp;49)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> madek-icon-font <small class="fgc1">(Glyphs:&nbsp;56)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: 16</h1>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-contrast"></span><span class="mls"> icon-contrast</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e636" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe636;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
 				<span class="icon-question-mark"></span><span class="mls"> icon-question-mark</span>
@@ -20,6 +33,32 @@
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e600" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe600;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-undo"></span><span class="mls"> icon-undo</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e637" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe637;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-user-mini"></span><span class="mls"> icon-user-mini</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e61b" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe61b;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
@@ -46,6 +85,19 @@
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e601" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe601;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-tag-mini"></span><span class="mls"> icon-tag-mini</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e632" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe632;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
@@ -93,6 +145,19 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
+				<span class="icon-kontext-mini"></span><span class="mls"> icon-kontext-mini</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e633" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe633;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
 				<span class="icon-admin"></span><span class="mls"> icon-admin</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
@@ -106,11 +171,37 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
+				<span class="icon-folder-mini"></span><span class="mls"> icon-folder-mini</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e634" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe634;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
 				<span class="icon-lock"></span><span class="mls"> icon-lock</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e60a" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe60a;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-group-mini"></span><span class="mls"> icon-group-mini</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e635" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe635;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
