--- a/app/assets/fonts/madek-icon-font/demo.html
+++ b/app/assets/fonts/madek-icon-font/demo.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style.css"></head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> madek-icon-font <small class="fgc1">(Glyphs:&nbsp;56)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> madek-icon-font <small class="fgc1">(Glyphs:&nbsp;58)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: 16</h1>
@@ -41,11 +41,37 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
+				<span class="icon-lens-mini"></span><span class="mls"> icon-lens-mini</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e638" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe638;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
 				<span class="icon-undo"></span><span class="mls"> icon-undo</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e637" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe637;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-filter-mini"></span><span class="mls"> icon-filter-mini</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e639" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe639;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
@@ -184,32 +210,6 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-lock"></span><span class="mls"> icon-lock</span>
-			</div>
-			<fieldset class="fs0 size1of1 clearfix">
-				<input type="text" readonly value="e60a" class="unit size1of2" />
-				<input type="text" maxlength="1" readonly value="&#xe60a;" class="unitRight size1of2 talign-right" />
-			</fieldset>
-			<div class="fs0 bshadow0 clearfix noLiga-true">
-				<span class="unit pvs fgc1">liga: </span>
-				<input type="text" readonly value="" class="liga unitRight" />
-			</div>
-		</div>
-		<div class="glyph fs1">
-			<div class="clearfix bshadow0 pbs">
-				<span class="icon-group-mini"></span><span class="mls"> icon-group-mini</span>
-			</div>
-			<fieldset class="fs0 size1of1 clearfix">
-				<input type="text" readonly value="e635" class="unit size1of2" />
-				<input type="text" maxlength="1" readonly value="&#xe635;" class="unitRight size1of2 talign-right" />
-			</fieldset>
-			<div class="fs0 bshadow0 clearfix noLiga-true">
-				<span class="unit pvs fgc1">liga: </span>
-				<input type="text" readonly value="" class="liga unitRight" />
-			</div>
-		</div>
-		<div class="glyph fs1">
-			<div class="clearfix bshadow0 pbs">
 				<span class="icon-cog"></span><span class="mls"> icon-cog</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
@@ -280,19 +280,6 @@
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e612" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe612;" class="unitRight size1of2 talign-right" />
-			</fieldset>
-			<div class="fs0 bshadow0 clearfix noLiga-true">
-				<span class="unit pvs fgc1">liga: </span>
-				<input type="text" readonly value="" class="liga unitRight" />
-			</div>
-		</div>
-		<div class="glyph fs1">
-			<div class="clearfix bshadow0 pbs">
-				<span class="icon-star"></span><span class="mls"> icon-star</span>
-			</div>
-			<fieldset class="fs0 size1of1 clearfix">
-				<input type="text" readonly value="e614" class="unit size1of2" />
-				<input type="text" maxlength="1" readonly value="&#xe614;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
@@ -800,6 +787,45 @@
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e631" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe631;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-star"></span><span class="mls"> icon-star</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e614" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe614;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-group-mini"></span><span class="mls"> icon-group-mini</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e635" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe635;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-lock"></span><span class="mls"> icon-lock</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e60a" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe60a;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
